# test_tonic

./: .gitignore
client/: Cargo.toml  build.rs
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
