[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.1"
tokio = { version = "1.17", features = [ "rt-multi-thread"] }
prost = "0.10"

[build-dependencies]
tonic-build = { version = "0.7", features = [ "prost" ] }
